--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^12.5.0",
+    "owlcarousel": "^1.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^7.2.0",
     "swiper": "^11.2.5",
     "typed.js": "^2.1.0"
