--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "framer-motion": "^12.5.0",
+    "lenis": "^1.3.16",
     "owlcarousel": "^1.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
